# vase

./: .gitignore  Cargo.toml  README.md  build.rs  file_header  rustfmt.toml  string_cache_test.rs  test.c
benches/: atomic_box_v_arc_swap.rs  bench_main.rs  once_array_v_rwlock.rs
include/: README.md  iso646.h  stdalign.h  stdarg.h  stdbool.h  stddef.h  stdnoreturn.h
macros/: Cargo.toml
macros/src/: create_intos.rs  enum_with_properties.rs  lib.rs  util.rs  variant_list.rs  variant_names.rs
src/: lib.rs  main.rs  test_utils.rs
src/c/: char_reader.rs  compile_env.rs  error.rs  error_scope.rs  file_reader.rs  file_tokens.rs  lexer.rs  lexer_error.rs  mod.rs  multi_lexer.rs  settings.rs  token.rs  token_stack.rs
src/c/ast/: decl.rs  expr.rs  file.rs  literal.rs  mod.rs  number.rs  operators.rs  qualifications.rs  scope.rs  stmt.rs  string.rs  types.rs  visitor.rs
src/c/parser/: error.rs  implementation.rs  mod.rs
src/c/token/: include_type.rs  keyword.rs  kind.rs  mod.rs  string_enc.rs  string_encoding.rs
src/c/traveler/: error.rs  frame.rs  frame_stack.rs  if_evaluator.rs  if_parser.rs  implementation.rs  macro_kind.rs  mod.rs  state.rs
src/error/: coded.rs  mod.rs  receiver.rs  severity.rs  unwind.rs
src/math/: base.rs  mod.rs  non_max.rs  num.rs  parsing.rs  sign.rs
src/sync/: atomic_arc.rs  atomic_box.rs  mod.rs  once_array.rs  work_queue.rs
src/util/: char_ext.rs  convert.rs  mem.rs  mod.rs  num_parsing.rs  ptr_equality.rs  redecl_map.rs  source_loc.rs  source_location.rs  string_builder.rs  string_cache.rs  vec32.rs
tests/: test_main.rs
tests/c/: mod.rs
tests/c/lexer/: comments.rs  mod.rs  preprocessor.rs  symbols.rs  test_comments.rs  test_preprocessor.rs  test_symbols.rs
tests/c/traveler/: conditional.rs  include.rs  macros.rs  mod.rs  token_joining.rs
tests/math/: mod.rs  parsing.rs
tests/util/: mod.rs  num_parsing.rs
