[package]
name = "vase"
version = "0.0.1"
authors = ["remilia.dev"]
description = "A multi-threaded C compiler."
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2018"
publish = false

[dependencies]
memmap2 = "0.2.0"
parking_lot = "0.11.1"
rayon = "1.5"
thread_local = "1.1.2"
unicode-normalization = "0.1.16"
walkdir = "2"

[dev-dependencies]
criterion = { version = "0.3", features = ['real_blackbox', 'html_reports'] }
indoc = "1.0"

[[bench]]
name = "bench_main"
harness = false
