[package]
name = "vase"
version = "0.0.1"
authors = ["remilia.dev"]
description = "A multi-threaded C compiler."
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2018"
publish = false

[features]
default = ["file-reading", "multithreading"]
file-reading = ["memmap2"]
multithreading = ["rayon", "thread_local"]
wasm-bindgen = ["parking_lot/wasm-bindgen"]

[dependencies]
codespan-reporting = "0.11.0"
memmap2 = { version = "0.2.0", optional = true }
parking_lot = { version = "0.11.1", features = ["nightly"] }
rayon = { version = "1.5", optional = true }
replace_with = "0.1.7"
thread_local = { version = "1.1.2", optional = true }
unicode-normalization = "0.1.16"
walkdir = "2"
vase-macros = { path = "./macros" }

[dev-dependencies]
criterion = { version = "0.3", features = ['real_blackbox', 'html_reports'] }
indoc = "1.0"

[build-dependencies]
fs_extra = "1.2.0"

[[bench]]
name = "bench_main"
harness = false

[profile.release]
debug = true
