[package]
name = "vase-macros"
version = "0.0.1"
authors = ["remilia.dev"]
description = "Macros for the Vase compiler."
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2018"
publish = false

[dependencies]
quote = "1.0.9"
syn = { version = "1.0", features = [ "full" ] }

[lib]
proc-macro = true